--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "lazy-load-images": "^1.0.1",
     "lodash": "^4.17.21",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-jw-player": "1.19.1",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
@@ -38,6 +40,7 @@
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "universal-cookie": "^6.1.0",
     "yup": "^1.2.0"
   }
 }
