--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-minimal-side-navigation": "^1.9.2",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
