--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-blink-text": "^1.0.5",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-jw-player": "1.19.1",
@@ -37,6 +38,7 @@
     "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.1.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
